--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Hello world!
-Lia Zhao's CSCE 190 Site
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Lia Zhao</title>
+    </head>
+    <body>
+        <h1>Lia Zhao's CSCE 190 Site</h1>
+
+        <p> &hearts; coding!</p>
+    </body>
+</html>
