--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Lia Zhao's CSCE 190 Site</h1>
 
-        <p> &hearts; coding!</p>
+        <p>I &hearts; coding!</p>
     </body>
 </html>
