--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <body>
         <h1>Lia Zhao's CSCE 190 Site</h1>
 
+        <!--Problem Statement Assignment-->
         <section class="assignment">
-            <a href="files/CSCE 190 affinitydiagram.pdf"><img src="images/problemstatementfood.PNG"></a>
+            <a href="files/CSCE 190 problemstatement.pdf"><img src="images/problemstatementfood.PNG"></a>
 
             <section class="ass-details">
-                <a href="files/CSCE 190 affinitydiagram.pdf"><h2>Problem Statement: Dining Halls & Meal Swipes</h2></a>
+                <a href="files/CSCE 190 problemstatement.pdf"><h2>Problem Statement: Dining Halls & Meal Swipes</h2></a>
                 <P>
                     UofSC students are frustrated with not being able to know what food is being served before they swipe their meal cards such as in Russell House and other dining areas. Especially with their hectic class schedules, finding delicious and nutritious meals on a time crunch can be a big challenge. Unfortunately, this predicament often causes people to waste a meal swipe on food they dislike and waste precious minutes on time that could be used elsewhere. Thus, our solution should provide a way for users to see what is being served at each dining hall everyday.
+                </P>
+            
+            </section>
+        </section>
+
+
+        <!--Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/Brainstorm.pdf"><img src="images/Brainstorm 1.png"></a>
+
+            <section class="ass-details">
+                <a href="files/Brainstorm.pdf"><h2>Affinity Diagram: Dining Halls & Meal Swipes</h2></a>
+                <P>
+                    My team and I formed ideas for what possible food and dining scenarios our app could tackle.
                 </P>
             
             </section>
