--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="files/Brainstorm.pdf"><img src="images/Brainstorm 1.png"></a>
 
             <section class="ass-details">
-                <a href="files/Brainstorm.pdf"><h2>Affinity Diagram: Dining Halls & Meal Swipes</h2></a>
+                <a href="files/CSCE 190 cover page-combined.pdf"><h2>Affinity Diagram: Dining Halls & Meal Swipes</h2></a>
                 <P>
                     My team and I formed ideas for what possible food and dining scenarios our app could tackle.
                 </P>
