--- a/index.html
+++ b/index.html
@@ -37,3 +37,19 @@
         <p></p>
     </body>
 </html>
+<!--Persona Assignment-->
+<section class="assignment">
+    <a href="files/Personas Assignments.pdf"><img src="images/myPersona.PNG"></a>
+
+    <section class="ass-details">
+        <a href="files/Personas Assignments.pdf"><h2>Persona: 5 Personas For Dining App  </h2></a>
+        <P>
+            My team and I created personas for what kinds of users would use our app.
+        </P>
+    
+    </section>
+</section>
+
+<p></p>
+</body>
+</html>
