--- a/index.html
+++ b/index.html
@@ -70,3 +70,19 @@
 <p></p>
 </body>
 </html>
+<!--App Sketches-->
+<section class="assignment">
+    <a href="files/AppSketches.pdf"><img src="images/myAppSketches.PNG"></a>
+
+    <section class="ass-details">
+        <a href="files/AppSketches.pdf"><h2>App Sketches: Ideas For FoodX  </h2></a>
+        <P>
+            My team and I created sketches for features we wanted to include in our app.
+        </P>
+    
+    </section>
+</section>
+
+<p></p>
+</body>
+</html>
