--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
             <!--Paper Prototype-->
             <section class="assignment">
-                <a href="files/Video.mov">
+                <a href="https://youtu.be/0Yp-8nDIYvI">
                     <h2>Paper Prototype For FoodX</h2>
                 </a>
 
-                    <a href="files/Video.mov">
+                    <a href="https://youtu.be/0Yp-8nDIYvI">
                         <img src="images/paperProto.PNG">
                     </a>
                     <P>
