--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!--Affinity Diagram Assignment-->
             <section class="assignment">
                 <a href="files/Brainstorm.pdf">
-                    <h2>Affinity Diagram: Dining Halls & Meal Swipes</h2>
+                    <h2>Affinity Diagram: Brainstorming</h2>
                 </a>
 
                     <a href="files/CSCE 190 cover page-combined.pdf">
@@ -44,7 +44,7 @@
             <!--Persona Assignment-->
             <section class="assignment">
                 <a href="files/Personas Assignments.pdf">
-                    <h2>Persona: 5 Personas For Dining App  </h2>
+                    <h2>Personas For Dining App  </h2>
                 </a>
 
                     <a href="files/Personas Assignments.pdf">
@@ -59,7 +59,7 @@
             <!--Persona Storyboards-->
             <section class="assignment">
                 <a href="files/Storyboard personas.pdf">
-                    <h2>Storyboard: 5 Storyboards For Dining App</h2>
+                    <h2>Storyboards For Dining App</h2>
                 </a>
 
                     <a href="files/Storyboard personas.pdf">
