--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!--Affinity Diagram Assignment-->
             <section class="assignment">
                 <a href="files/Brainstorm.pdf">
-                    <h2>Affinity Diagram: Brainstorming</h2>
+                    <h2>Affinity Diagram: Dining Halls & Meal Swipes</h2>
                 </a>
 
                     <a href="files/CSCE 190 cover page-combined.pdf">
@@ -44,7 +44,7 @@
             <!--Persona Assignment-->
             <section class="assignment">
                 <a href="files/Personas Assignments.pdf">
-                    <h2>Personas For Dining App  </h2>
+                    <h2>Persona: 5 Personas For Dining App  </h2>
                 </a>
 
                     <a href="files/Personas Assignments.pdf">
@@ -59,7 +59,7 @@
             <!--Persona Storyboards-->
             <section class="assignment">
                 <a href="files/Storyboard personas.pdf">
-                    <h2>Storyboards For Dining App</h2>
+                    <h2>Storyboard: 5 Storyboards For Dining App</h2>
                 </a>
 
                     <a href="files/Storyboard personas.pdf">
@@ -96,6 +96,20 @@
                     </a>
                     <P>
                         My team and I created a paper prototype for the app.
+                    </P>
+            </section>
+
+            <!--Hi-Fi Prototype-->
+            <section class="assignment">
+                <a href="files/FoodX-proto/src/index.html">
+                    <h2>Hi-Fi Prototype for FoodX</h2>
+                </a>
+
+                    <a href="files/FoodX-proto/src/index.html">
+                        <img src="images/foodx_img.PNG">
+                    </a>
+                    <P>
+                        My team and I created a hi-fi prototype of the app.
                     </P>
             </section>
     </div>
